# cat4igp

./: .gitignore  CLIENT_CONFIG_GUIDE.md  Cargo.toml  IPC_DOCUMENTATION.md  README.md
client/: Cargo.toml
client/docs/: INTERFACE_NAMING_CONVENTION.md
client/src/: interface_util.rs  main.rs  tunnel.rs  util.rs
client/src/config/: mod.rs  server.rs
client/src/daemon/: client.rs  daemon_memory.rs  mod.rs  protocol.rs
client/src/daemon/daemon_memory/: mod.rs  wireguard.rs
client/src/interface/: mod.rs
client/src/netassist/: fec.rs  mod.rs
client/src/network/: mod.rs  ports.rs  public_ip.rs  tls.rs
client/src/server_rest/: client.rs
client/src/tunnel/: shared.rs  wireguard.rs
libfec/: Cargo.toml  README.md
libfec/src/: config.rs  control.rs  engine.rs  fec.rs  handshake.rs  lib.rs  proto.rs  stats.rs  transport.rs
libfec/tests/: fec_e2e.rs  fec_matrix.rs  fec_sim.rs  peer_update.rs
server/: Cargo.toml
server/migrations/2025-12-04-211807-0000_c1/: down.sql  up.sql
server/migrations/2025-12-04-232321-0000_c1/: down.sql  up.sql
server/migrations/2026-01-24-033516-0000_mesh_group/: down.sql  up.sql
server/migrations/2026-01-27-005802-0000_invite/: down.sql  up.sql
server/migrations/2026-02-25-023045-0000_udpstuff/: down.sql  up.sql
server/src/: db.rs  enums.rs  ext.rs  main.rs  models.rs  router.rs  schema.rs
server/src/router/: client.rs  operator.rs
shared/: Cargo.toml
shared/src/: custom_type.rs  lib.rs
shared/src/rest/: client.rs  mod.rs  operator.rs
