[package]
name = "cat4igp-client"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10.6"
futures-util = "0.3.31"
ipnet = "2.11.0"
rtnetlink = "0.18.1"
tokio = { version = "1.48.0", features = ["full"] }
wireguard-control = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
reqwest = "0.11"
dns-lookup = "1.0"
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
rand = "0.8"
udp_sas = "0.1"
libc = "0.2"
cat4igp-shared = { workspace = true }
base32 = "0.5.1"

[dev-dependencies]
tempfile = "3.8"
