[package]
name = "cat4igp-libfec"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
reed-solomon-erasure = "6"
rand = "0.8"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
