[package]
name = "cat4igp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws", "multipart", "http2", "macros"] }
chrono = { workspace = true }
diesel = { version = "2.3.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.19.0", features = ["v4"] }
cat4igp-shared = { workspace = true }
